--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-    "engines" : { 
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.20.1 <17.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.20.1 <17.0.0"
   },
   "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch ",
+    "dev": "node --watch app.js",
     "start": "node --watch app.js"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
+    "mongodb-memory-server": "^9.4.0",
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
