--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch ",
-    "dev": "node --watch app.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --testTimeout=4000 --watch ",
+    "dev": "  node  --trace-warnings --watch  app.js",
     "start": "node --watch app.js"
   },
   "keywords": [],
@@ -19,11 +19,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
     "mongodb-memory-server": "^9.4.0",
@@ -35,7 +35,12 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.7",
-    "eslint": "^9.2.0",
+    "@shelf/jest-mongodb": "^4.3.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
 }
